@@ -30,46 +30,63 @@
   bare_jid_to_string/1
 ]).
 
+-define(NODE_MAX_LENGTH,     1023).
+-define(DOMAIN_MAX_LENGTH,   1023).
+-define(RESOURCE_MAX_LENGTH, 1023).
+-define(BARE_JID_MAX_LENGTH, ?NODE_MAX_LENGTH + 1 + ?DOMAIN_MAX_LENGTH).
+-define(JID_MAX_LENGTH,      ?BARE_JID_MAX_LENGTH + 1 + ?RESOURCE_MAX_LENGTH).
+
 % --------------------------------------------------------------------
 % JID creation & conversion.
 % --------------------------------------------------------------------
 
-make_bare_jid(undefined, Server) ->
-    case exmpp_stringprep:nameprep(Server) of
+make_bare_jid(_Node, Domain)
+  when length(Domain) > ?DOMAIN_MAX_LENGTH ->
+    {error, domain_too_long};
+make_bare_jid(undefined, Domain) ->
+    case exmpp_stringprep:nameprep(Domain) of
         error ->
-            {error, bad_server};
-        LServer ->
+            {error, bad_domain};
+        LDomain ->
             #jid{
               user = undefined,
-              server = Server,
+              server = Domain,
               resource = undefined,
               luser = undefined,
-              lserver = LServer,
+              lserver = LDomain,
               lresource = undefined
             }
     end;
-make_bare_jid(User, Server) ->
-    case exmpp_stringprep:nodeprep(User) of
+make_bare_jid(Node, _Domain)
+  when length(Node) > ?NODE_MAX_LENGTH ->
+    {error, node_too_long};
+make_bare_jid(Node, Domain) ->
+    case exmpp_stringprep:nodeprep(Node) of
         error ->
-            {error, bad_user};
-        LUser ->
-            case exmpp_stringprep:nameprep(Server) of
+            {error, bad_node};
+        LNode ->
+            case exmpp_stringprep:nameprep(Domain) of
                 error ->
-                    {error, bad_server};
-                LServer ->
+                    {error, bad_domain};
+                LDomain ->
                     #jid{
-                      user = User,
-                      server = Server,
+                      user = Node,
+                      server = Domain,
                       resource = undefined,
-                      luser = LUser,
-                      lserver = LServer,
+                      luser = LNode,
+                      lserver = LDomain,
                       lresource = undefined
                     }
             end
     end.
 
-make_jid(User, Server, Resource) ->
-    case make_bare_jid(User, Server) of
+make_jid(Node, Domain, undefined) ->
+    make_bare_jid(Node, Domain);
+make_jid(_Node, _Domain, Resource)
+  when length(Resource) > ?RESOURCE_MAX_LENGTH ->
+    {error, resource_too_long};
+make_jid(Node, Domain, Resource) ->
+    case make_bare_jid(Node, Domain) of
         {error, Reason} ->
             {error, Reason};
         Jid ->
@@ -84,6 +101,9 @@ jid_to_bare_jid(Jid) ->
 
 bare_jid_to_jid(Jid, undefined) ->
     Jid;
+bare_jid_to_jid(_Jid, Resource)
+  when length(Resource) > ?RESOURCE_MAX_LENGTH ->
+    {error, resource_too_long};
 bare_jid_to_jid(Jid, Resource) ->
     case exmpp_stringprep:resourceprep(Resource) of
         error ->
@@ -99,9 +119,15 @@ bare_jid_to_jid(Jid, Resource) ->
 % JID parsing.
 % --------------------------------------------------------------------
 
+string_to_jid(String)
+  when length(String) > ?JID_MAX_LENGTH ->
+    {error, jid_too_long};
 string_to_jid(String) ->
     parse_jid(full, String, "").
 
+string_to_bare_jid(String)
+  when length(String) > ?BARE_JID_MAX_LENGTH ->
+    {error, jid_too_long};
 string_to_bare_jid(String) ->
     parse_jid(bare, String, "").
 
@@ -117,12 +143,12 @@ parse_jid(_Type, [$/ | _Rest], "") ->
 parse_jid(full, [$/], _Domain) ->
     % Invalid JID of the form "Domain/".
     {error, unexpected_end_of_string};
-parse_jid(bare, [$/ | _Rest], Domain) ->
+parse_jid(bare, [$/ | _Resource], Domain) ->
     % Valid JID of the form "Domain/Resource" (resource is dropped).
     make_bare_jid(undefined, lists:reverse(Domain));
-parse_jid(full, [$/ | Rest], Domain) ->
+parse_jid(full, [$/ | Resource], Domain) ->
     % Valid JID of the form "Domain/Resource".
-    make_jid(undefined, lists:reverse(Domain), Rest);
+    make_jid(undefined, lists:reverse(Domain), Resource);
 parse_jid(Type, [C | Rest], Node_Or_Domain) ->
     % JID of the form "Node@Domain" or "Node@Domain/Resource".
     parse_jid(Type, Rest, [C | Node_Or_Domain]);
@@ -148,9 +174,9 @@ parse_jid(full, [$/], _Node, _Domain) ->
 parse_jid(bare, [$/ | _Rest], Node, Domain) ->
     % Valid JID of the form "Node@Domain/Resource" (resource is dropped).
     make_bare_jid(Node, lists:reverse(Domain));
-parse_jid(full, [$/ | Rest], Node, Domain) ->
+parse_jid(full, [$/ | Resource], Node, Domain) ->
     % Valid JID of the form "Node@Domain/Resource".
-    make_jid(Node, lists:reverse(Domain), Rest);
+    make_jid(Node, lists:reverse(Domain), Resource);
 parse_jid(Type, [C | Rest], Node, Domain) ->
     % JID of the form "Node@Domain" or "Node@Domain/Resource".
     parse_jid(Type, Rest, Node, [C | Domain]);
@@ -168,22 +194,22 @@ parse_jid(full, [], Node, Domain) ->
 % JID serialization.
 % --------------------------------------------------------------------
 
-jid_to_string(#jid{user = User, server = Server, resource = Res}) ->
-    jid_to_string(User, Server, Res).
+jid_to_string(#jid{user = Node, server = Domain, resource = Resource}) ->
+    jid_to_string(Node, Domain, Resource).
 
-jid_to_string(User, Server, Res) ->
-    S1 = bare_jid_to_string(User, Server),
-    case Res of
+jid_to_string(Node, Domain, Resource) ->
+    S1 = bare_jid_to_string(Node, Domain),
+    case Resource of
         undefined -> S1;
-        _         -> S1 ++ "/" ++ Res
+        _         -> S1 ++ "/" ++ Resource
     end.
 
-bare_jid_to_string(#jid{user = User, server = Server}) ->
-    bare_jid_to_string(User, Server).
+bare_jid_to_string(#jid{user = Node, server = Domain}) ->
+    bare_jid_to_string(Node, Domain).
 
-bare_jid_to_string(User, Server) ->
-    S1 = case User of
+bare_jid_to_string(Node, Domain) ->
+    S1 = case Node of
         undefined -> "";
-        _         -> User ++ "@"
+        _         -> Node ++ "@"
     end,
-    S1 ++ Server.
+    S1 ++ Domain.
